using UnityEngine;

internal class AnimationStates
{
    internal static string attackTrigger = "attackTrigger";
    internal static string damageTrigger = "damageTrigger";
    internal static string isBlocking = "isBlocking";
    internal static string isMoving = "isMoving";
    internal static string isJumping = "isJumping";
    internal static string doMelee = "doMelee";
}
